--- a/Bihar Government Degree Courses.html
+++ b/Bihar Government Degree Courses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpha Computer Centre (Bihar Government Degree Courses)</title>
+    <title>Computer Centre (Bihar Government Degree Courses)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
